--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,9 @@
             android:name=".JWPlayerFragmentExample"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         </activity>
-        <!--TODO Set your license key-->
-        <!--<meta-data-->
-            <!--android:name="JW_LICENSE_KEY"-->
-            <!--android:value="YOUR_LICENSE_KEY"/>-->
+        <meta-data
+            android:name="JW_LICENSE_KEY"
+            android:value="poGJbQ1rkmtGBstwwwLzKUjBf+Kg62UQywfVQXr9ml56MU9+"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
